--- a/app/package.json
+++ b/app/package.json
@@ -5,5 +5,8 @@
   "main": "index.js",
   "devDependencies": {
     "electron": "^11.3.0"
+  },
+  "dependencies": {
+    "fs-extra": "^10.0.0"
   }
 }
