--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -1,15 +1,15 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "target": "ES2018",
-    "module": "CommonJS",
-    "outDir": "../../app"
-  },
-  "include": [
-    "../main/**/*",
-    "../common/**/*"
-  ],
-  "exclude": [
-    "../renderer/**/*"
-  ]
+	"extends": "../../tsconfig.json",
+	"compilerOptions": {
+		"target": "ESNext",
+		"module": "CommonJS",
+		"outDir": "../../app"
+	},
+	"include": [
+		"../main/**/*",
+		"../common/**/*"
+	],
+	"exclude": [
+		"../renderer/**/*"
+	]
 }
