--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -1,23 +1,23 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext"
-    ],
-    "types": [
-      "vite/client"
-    ],
-    "target": "esnext",
-    "module": "esnext",
-    "jsx": "react"
-  },
-  "include": [
-    "../renderer/**/*",
-    "../common/**/*"
-  ],
-  "exclude": [
-    "../main/**/*"
-  ]
+	"extends": "../../tsconfig.json",
+	"compilerOptions": {
+		"lib": [
+			"DOM",
+			"DOM.Iterable",
+			"ESNext"
+		],
+		"types": [
+			"svelte",
+			"vite/client"
+		],
+		"target": "esnext",
+		"module": "esnext"
+	},
+	"include": [
+		"../renderer/**/*",
+		"../common/**/*"
+	],
+	"exclude": [
+		"../main/**/*"
+	]
 }
