--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,41 @@
 {
-  "compilerOptions": {
-    "target": "ES2018",
-    "noImplicitAny": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "allowJs": true,
-    "checkJs": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "strictBindCallApply": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "sourceMap": true,
-    "baseUrl": "./src",
-    "paths": {
-      "@main/*": ["main/*"],
-      "@common/*": ["common/*"],
-      "@renderer/*": ["renderer/*"]
-    }
-  },
-  "exclude": ["node_modules", "app", "dist"]
+	"compilerOptions": {
+		"target": "ESNext",
+		"noImplicitAny": true,
+		"removeComments": true,
+		"preserveConstEnums": true,
+		"allowJs": true,
+		"checkJs": true,
+		"strict": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"strictPropertyInitialization": true,
+		"strictBindCallApply": true,
+		"noImplicitThis": true,
+		"noImplicitReturns": true,
+		"experimentalDecorators": true,
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"moduleResolution": "node",
+		"importHelpers": true,
+		"sourceMap": true,
+		"baseUrl": "./src",
+		"resolveJsonModule": true,
+		"importsNotUsedAsValues": "error",
+		"isolatedModules": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"paths": {
+			"@main/*": ["main/*"],
+			"@common/*": ["common/*"],
+			"@renderer/*": ["renderer/*"],
+			"@lib/*": ["renderer/lib/*"]
+		}
+	},
+	"exclude": [
+		"node_modules",
+		"app",
+		"dist"
+	],
+	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
