--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,11 +25,16 @@
 		"isolatedModules": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
+		"types": [
+			"svelte",
+			"vite/client"
+		],
 		"paths": {
 			"@main/*": ["main/*"],
 			"@common/*": ["common/*"],
 			"@renderer/*": ["renderer/*"],
-			"@lib/*": ["renderer/lib/*"]
+			"@lib/*": ["renderer/lib/*"],
+			"@assets/*": ["renderer/assets/*"]
 		}
 	},
 	"exclude": [
@@ -37,5 +42,5 @@
 		"app",
 		"dist"
 	],
-	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
+	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte", "src/vite-env.d.ts"]
 }
